Update services: index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.suativitainhacantho.com" />
+    <meta property="twitter:url" content="Sửa TiVi Tại Nhà Cần Thơ" />
     <meta property="twitter:title" content="Sửa TiVi Tại Nhà Cần Thơ - Dịch Vụ Nhanh Trong 30 Phút" />
     <meta property="twitter:description" content="Dịch Vụ Sửa Tivi Nhanh Tại Nhà Cần Thơ Có mặt trong 30 phút • Bảo hành chuyên sâu" />
     <meta property="twitter:image" content="/LOGO1.png" />
